[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/card/card.svg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Entities/Card/CardExam.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="CardExam" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 509.575, 290.808 )
scale = Vector2( 2.27635, 2.38749 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 141.0
margin_top = 119.0
margin_right = 871.0
margin_bottom = 317.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "hola
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 645.601
margin_top = 478.185
margin_right = 808.601
margin_bottom = 507.185
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer"]
margin_left = 55.0
margin_top = 4.0
margin_right = 108.0
margin_bottom = 24.0
text = "texto1"

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = 645.601
margin_top = 414.113
margin_right = 808.601
margin_bottom = 443.113
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer2"]
margin_left = 55.0
margin_top = 4.0
margin_right = 108.0
margin_bottom = 24.0
text = "texto1"

[node name="CenterContainer3" type="CenterContainer" parent="."]
margin_left = 170.398
margin_top = 491.533
margin_right = 333.398
margin_bottom = 520.533
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer3"]
margin_left = 55.0
margin_top = 4.0
margin_right = 108.0
margin_bottom = 24.0
text = "texto1"

[node name="CenterContainer4" type="CenterContainer" parent="."]
margin_left = 167.728
margin_top = 408.773
margin_right = 330.728
margin_bottom = 437.773
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer4"]
margin_left = 55.0
margin_top = 4.0
margin_right = 108.0
margin_bottom = 24.0
text = "texto1"

[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer2/Button" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer3/Button" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CenterContainer4/Button" to="." method="_on_Button4_pressed"]
